# mcp-zero

./: .gitignore  BETA_LAUNCH_PLAN.md  Cargo.toml  LICENSE  LICENSE.md  README.md  acceleration_server.go  discovered_endpoints.json  docker-compose.yaml  engineering_left.md  memory_trace.db  pare_demo.db  planning.md  requirements.txt  rpc_test_results.json  run_all_demos.sh
config/: settings.py
demo/: run_demo.py  test_agent.py
demos/: README.md  advanced_code_analyzer_base.py  advanced_code_completion.py  advanced_code_refactor.py  agent_memory_test.py  agreement_demo.py  available_services_demo.py  consensus_agreement_test.py  endpoint_discovery.py  enhanced_code_generator.py  enhanced_editor_demo.py  enhanced_project_memory.py  integrated_agent_demo.py  integrated_test.py  internal_agreement_demo.py  llm_agent_test.py  mcp_agreement_client.py  mcp_db_client.py  mcp_llm_client.py  mcp_rpc_client.py  minimal_agent.py  production_demo.py  real_server_demo.py  unified_rpc_test.py  working_rpc_demo.py
docs/: 00_documentation_index.md  01_getting_started.md  02_architecture_overview.md  03_developer_guide.md  04_api_reference.md  05_kernel_architecture.md  06_sdk_interface.md  07_deployment_architecture.md  08_plugin_system.md  09_rpc_layer.md  10_mesh_network.md  11_agreement_templates.md  12_trace_engine.md  13_database_architecture.md  14_testing_procedures.md  15_ci_cd_pipeline.md  16_performance_guide.md  17_security_model.md  18_hardware_requirements.md  19_configuration_guide.md  20_monitoring_setup.md  21_backup_procedures.md  22_security_hardening.md  23_ethical_governance.md  24_troubleshooting.md  25_upgrade_procedures.md  26_integration_patterns.md  27_scalability_guide.md  28_sustainability_planning.md  29_glossary.md  30_quickstart_examples.md  30_server_operations.md  31_pare_protocol.md  31_solidity_agreements.md  32_agent_development.md  32_memory_manifest.md  33_creative_workflows.md  34_memory_trace_system.md  35_plugin_development.md  36_enterprise_deployment.md  (+9 more)
examples/: deploy_agreement.py  deployed_agreement.json  smart_task_agent.py  solidity_middleware_example.py
kubernetes/: namespace.yaml
marketplace/: marketplace.py
memory_trace/: __init__.py  agent_memory_demo.py  test_memory_tree.py
pare_protocol/: __init__.py  chain_protocol.py  demo.py  (+7 more)
src/hm/: Cargo.toml
src/hm/src/: alert.rs  config.rs  lib.rs  main.rs  resource.rs
src/kernel/: Cargo.toml  config_manager.py  resilience.py
src/kernel/src/: agent.rs  config.rs  error.rs  ethical.rs  lib.rs  plugin.rs  storage.rs  trace.rs
(+243 files in other folders)
